// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(DatePickerInput)>
    <DatePickerInput
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isIncomplete={false}
      isInvalid={false}
      maxDate="2100-12-31"
      minDate="1900-01-01"
      required={false}
      useExternalFormatMask={false}
    >
      <div
        className="orion-fusion-theme"
      >
        <div
          className="date-input-container"
        >
          <div
            className="date-input"
          >
            <input
              data-terra-date-input-hidden={true}
              type="hidden"
            />
            <VisuallyHiddenText
              text="Terra.datePicker.date"
            >
              <span
                className="visually-hidden-text"
              >
                Terra.datePicker.date
              </span>
            </VisuallyHiddenText>
            <VisuallyHiddenText
              aria-atomic="true"
              aria-live="assertive"
              aria-relevant="all"
              refCallback={[Function]}
            >
              <span
                aria-atomic="true"
                aria-live="assertive"
                aria-relevant="all"
                className="visually-hidden-text"
              />
            </VisuallyHiddenText>
            <DateInputLayout
              dateFormatOrder="MDY"
              day={
                <Input
                  aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                  aria-label="Terra.datePicker.dayLabel"
                  aria-required={false}
                  className="date-input-day"
                  disabled={false}
                  isIncomplete={false}
                  isInvalid={false}
                  maxLength="2"
                  name="terra-date-day-undefined"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pattern="\\\\d*"
                  refCallback={[Function]}
                  required={false}
                  size="2"
                  type="text"
                  value=""
                />
              }
              month={
                <Input
                  aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                  aria-label="Terra.datePicker.monthLabel"
                  aria-required={false}
                  className="date-input-month"
                  disabled={false}
                  isIncomplete={false}
                  isInvalid={false}
                  maxLength="2"
                  name="terra-date-month-undefined"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pattern="\\\\d*"
                  refCallback={[Function]}
                  required={false}
                  size="2"
                  type="text"
                  value=""
                />
              }
              separator={
                <span
                  className="date-spacer"
                >
                  /
                </span>
              }
              year={
                <Input
                  aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                  aria-label="Terra.datePicker.yearLabel"
                  aria-required={false}
                  className="date-input-year"
                  disabled={false}
                  isIncomplete={false}
                  isInvalid={false}
                  maxLength="4"
                  name="terra-date-year-undefined"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pattern="\\\\d*"
                  refCallback={[Function]}
                  required={false}
                  size="4"
                  type="text"
                  value=""
                />
              }
            >
              <Input
                aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                aria-label="Terra.datePicker.monthLabel"
                aria-required={false}
                className="date-input-month"
                disabled={false}
                isIncomplete={false}
                isInvalid={false}
                maxLength="2"
                name="terra-date-month-undefined"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d*"
                refCallback={[Function]}
                required={false}
                size="2"
                type="text"
                value=""
              >
                <input
                  aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                  aria-label="Terra.datePicker.monthLabel"
                  aria-required={false}
                  className="form-input orion-fusion-theme date-input-month"
                  disabled={false}
                  maxLength="2"
                  name="terra-date-month-undefined"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pattern="\\\\d*"
                  required={false}
                  size="2"
                  type="text"
                  value=""
                />
              </Input>
              <span
                className="date-spacer"
              >
                /
              </span>
              <Input
                aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                aria-label="Terra.datePicker.dayLabel"
                aria-required={false}
                className="date-input-day"
                disabled={false}
                isIncomplete={false}
                isInvalid={false}
                maxLength="2"
                name="terra-date-day-undefined"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d*"
                refCallback={[Function]}
                required={false}
                size="2"
                type="text"
                value=""
              >
                <input
                  aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                  aria-label="Terra.datePicker.dayLabel"
                  aria-required={false}
                  className="form-input orion-fusion-theme date-input-day"
                  disabled={false}
                  maxLength="2"
                  name="terra-date-day-undefined"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pattern="\\\\d*"
                  required={false}
                  size="2"
                  type="text"
                  value=""
                />
              </Input>
              <span
                className="date-spacer"
              >
                /
              </span>
              <Input
                aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                aria-label="Terra.datePicker.yearLabel"
                aria-required={false}
                className="date-input-year"
                disabled={false}
                isIncomplete={false}
                isInvalid={false}
                maxLength="4"
                name="terra-date-year-undefined"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d*"
                refCallback={[Function]}
                required={false}
                size="4"
                type="text"
                value=""
              >
                <input
                  aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
                  aria-label="Terra.datePicker.yearLabel"
                  aria-required={false}
                  className="form-input orion-fusion-theme date-input-year"
                  disabled={false}
                  maxLength="4"
                  name="terra-date-year-undefined"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pattern="\\\\d*"
                  required={false}
                  size="4"
                  type="text"
                  value=""
                />
              </Input>
            </DateInputLayout>
          </div>
          <Button
            aria-label=" Terra.datePicker.openCalendar"
            className="button"
            data-terra-open-calendar-button={true}
            icon={
              <IconCalendar
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              />
            }
            isBlock={false}
            isCompact={true}
            isDisabled={false}
            isIconOnly={true}
            isReversed={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            text="Terra.datePicker.openCalendar"
            type="button"
            variant="neutral"
          >
            <button
              aria-disabled={false}
              aria-label=" Terra.datePicker.openCalendar"
              className="button neutral compact orion-fusion-theme button"
              data-terra-open-calendar-button={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              title="Terra.datePicker.openCalendar"
              type="button"
            >
              <span
                className="button-label-win icon-only"
              >
                <span
                  className="icon"
                >
                  <IconCalendar
                    className="icon-svg"
                    viewBox="0 0 48 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <IconBase
                      className="icon-svg"
                      focusable="false"
                      height="1em"
                      isBidi={false}
                      isSpin={false}
                      viewBox="0 0 48 48"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <svg
                        className="tui-Icon icon icon-svg"
                        focusable="false"
                        height="1em"
                        role="presentation"
                        viewBox="0 0 48 48"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                        />
                      </svg>
                    </IconBase>
                  </IconCalendar>
                </span>
              </span>
            </button>
          </Button>
        </div>
        <div
          className="format-text"
          id="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        >
          <VisuallyHiddenText
            aria-live="off"
            text=" 
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey "
          >
            <span
              aria-live="off"
              className="visually-hidden-text"
            >
               
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey 
            </span>
          </VisuallyHiddenText>
          <div
            aria-hidden="true"
          >
            (Terra.datePicker.dateFormat)
          </div>
        </div>
      </div>
    </DatePickerInput>
  </InjectIntl(DatePickerInput)>
</ThemeContextProvider>
`;

exports[`should pass in refCallback as the ref prop of the calendar button 1`] = `
<DatePickerInput
  buttonRefCallback={
    [MockFunction] {
      "calls": Array [
        Array [
          <button
            aria-disabled="false"
            aria-label=" Terra.datePicker.openCalendar"
            class="button neutral compact button"
            data-terra-open-calendar-button="true"
            title="Terra.datePicker.openCalendar"
            type="button"
          >
            <span
              class="button-label-win icon-only"
            >
              <span
                class="icon"
              >
                <svg
                  class="tui-Icon icon icon-svg"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                  />
                </svg>
              </span>
            </span>
          </button>,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isIncomplete={false}
  isInvalid={false}
  maxDate="2100-12-31"
  minDate="1900-01-01"
  required={false}
  useExternalFormatMask={false}
>
  <div
    className=""
  >
    <div
      className="date-input-container"
    >
      <div
        className="date-input"
      >
        <input
          data-terra-date-input-hidden={true}
          type="hidden"
        />
        <VisuallyHiddenText
          text="Terra.datePicker.date"
        >
          <span
            className="visually-hidden-text"
          >
            Terra.datePicker.date
          </span>
        </VisuallyHiddenText>
        <VisuallyHiddenText
          aria-atomic="true"
          aria-live="assertive"
          aria-relevant="all"
          refCallback={[Function]}
        >
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="all"
            className="visually-hidden-text"
          />
        </VisuallyHiddenText>
        <DateInputLayout
          dateFormatOrder="MDY"
          day={
            <Input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.datePicker.dayLabel"
              aria-required={false}
              className="date-input-day"
              disabled={false}
              isIncomplete={false}
              isInvalid={false}
              maxLength="2"
              name="terra-date-day-undefined"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="2"
              type="text"
              value=""
            />
          }
          month={
            <Input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.datePicker.monthLabel"
              aria-required={false}
              className="date-input-month"
              disabled={false}
              isIncomplete={false}
              isInvalid={false}
              maxLength="2"
              name="terra-date-month-undefined"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="2"
              type="text"
              value=""
            />
          }
          separator={
            <span
              className="date-spacer"
            >
              /
            </span>
          }
          year={
            <Input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.datePicker.yearLabel"
              aria-required={false}
              className="date-input-year"
              disabled={false}
              isIncomplete={false}
              isInvalid={false}
              maxLength="4"
              name="terra-date-year-undefined"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="4"
              type="text"
              value=""
            />
          }
        >
          <Input
            aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Terra.datePicker.monthLabel"
            aria-required={false}
            className="date-input-month"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-date-month-undefined"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.datePicker.monthLabel"
              aria-required={false}
              className="form-input date-input-month"
              disabled={false}
              maxLength="2"
              name="terra-date-month-undefined"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value=""
            />
          </Input>
          <span
            className="date-spacer"
          >
            /
          </span>
          <Input
            aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Terra.datePicker.dayLabel"
            aria-required={false}
            className="date-input-day"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-date-day-undefined"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.datePicker.dayLabel"
              aria-required={false}
              className="form-input date-input-day"
              disabled={false}
              maxLength="2"
              name="terra-date-day-undefined"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value=""
            />
          </Input>
          <span
            className="date-spacer"
          >
            /
          </span>
          <Input
            aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Terra.datePicker.yearLabel"
            aria-required={false}
            className="date-input-year"
            disabled={false}
            isIncomplete={false}
            isInvalid={false}
            maxLength="4"
            name="terra-date-year-undefined"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="4"
            type="text"
            value=""
          >
            <input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Terra.datePicker.yearLabel"
              aria-required={false}
              className="form-input date-input-year"
              disabled={false}
              maxLength="4"
              name="terra-date-year-undefined"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="4"
              type="text"
              value=""
            />
          </Input>
        </DateInputLayout>
      </div>
      <Button
        aria-label=" Terra.datePicker.openCalendar"
        className="button"
        data-terra-open-calendar-button={true}
        icon={
          <IconCalendar
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        }
        isBlock={false}
        isCompact={true}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        refCallback={
          [MockFunction] {
            "calls": Array [
              Array [
                <button
                  aria-disabled="false"
                  aria-label=" Terra.datePicker.openCalendar"
                  class="button neutral compact button"
                  data-terra-open-calendar-button="true"
                  title="Terra.datePicker.openCalendar"
                  type="button"
                >
                  <span
                    class="button-label-win icon-only"
                  >
                    <span
                      class="icon"
                    >
                      <svg
                        class="tui-Icon icon icon-svg"
                        focusable="false"
                        height="1em"
                        role="presentation"
                        viewBox="0 0 48 48"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        text="Terra.datePicker.openCalendar"
        type="button"
        variant="neutral"
      >
        <button
          aria-disabled={false}
          aria-label=" Terra.datePicker.openCalendar"
          className="button neutral compact button"
          data-terra-open-calendar-button={true}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          title="Terra.datePicker.openCalendar"
          type="button"
        >
          <span
            className="button-label-win icon-only"
          >
            <span
              className="icon"
            >
              <IconCalendar
                className="icon-svg"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <IconBase
                  className="icon-svg"
                  focusable="false"
                  height="1em"
                  isBidi={false}
                  isSpin={false}
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="tui-Icon icon icon-svg"
                    focusable="false"
                    height="1em"
                    role="presentation"
                    viewBox="0 0 48 48"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                    />
                  </svg>
                </IconBase>
              </IconCalendar>
            </span>
          </span>
        </button>
      </Button>
    </div>
    <div
      className="format-text"
      id="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
    >
      <VisuallyHiddenText
        aria-live="off"
        text=" 
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey "
      >
        <span
          aria-live="off"
          className="visually-hidden-text"
        >
           
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey 
        </span>
      </VisuallyHiddenText>
      <div
        aria-hidden="true"
      >
        (Terra.datePicker.dateFormat)
      </div>
    </div>
  </div>
</DatePickerInput>
`;

exports[`should render a date input with isIncomplete and required props 1`] = `
<div
  class=""
>
  <div
    class="date-input-container"
  >
    <div
      class="date-input is-incomplete"
    >
      <input
        data-terra-date-input-hidden="true"
        type="hidden"
      />
      <span
        class="visually-hidden-text"
      >
        Terra.datePicker.date
      </span>
      <span
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="all"
        class="visually-hidden-text"
      />
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.monthLabel"
        aria-required="true"
        class="form-input date-input-month"
        maxlength="2"
        name="terra-date-month-undefined"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="date-spacer"
      >
        /
      </span>
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.dayLabel"
        aria-required="true"
        class="form-input date-input-day"
        maxlength="2"
        name="terra-date-day-undefined"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="date-spacer"
      >
        /
      </span>
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.yearLabel"
        aria-required="true"
        class="form-input date-input-year"
        maxlength="4"
        name="terra-date-year-undefined"
        pattern="\\\\d*"
        size="4"
        type="text"
        value=""
      />
    </div>
    <button
      aria-disabled="false"
      aria-label=" Terra.datePicker.openCalendar"
      class="button neutral compact button"
      data-terra-open-calendar-button="true"
      title="Terra.datePicker.openCalendar"
      type="button"
    >
      <span
        class="button-label-win icon-only"
      >
        <span
          class="icon"
        >
          <svg
            class="tui-Icon icon icon-svg"
            focusable="false"
            height="1em"
            role="presentation"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="format-text"
    id="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
  >
    <span
      aria-live="off"
      class="visually-hidden-text"
    >
       
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey 
    </span>
    <div
      aria-hidden="true"
    >
      (Terra.datePicker.dateFormat)
    </div>
  </div>
</div>
`;

exports[`should render a date input with isInvalid prop 1`] = `
<div
  class=""
>
  <div
    class="date-input-container"
  >
    <div
      class="date-input is-invalid"
    >
      <input
        data-terra-date-input-hidden="true"
        type="hidden"
      />
      <span
        class="visually-hidden-text"
      >
        Terra.datePicker.date
      </span>
      <span
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="all"
        class="visually-hidden-text"
      />
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.monthLabel"
        aria-required="false"
        class="form-input date-input-month"
        maxlength="2"
        name="terra-date-month-undefined"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="date-spacer"
      >
        /
      </span>
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.dayLabel"
        aria-required="false"
        class="form-input date-input-day"
        maxlength="2"
        name="terra-date-day-undefined"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="date-spacer"
      >
        /
      </span>
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.yearLabel"
        aria-required="false"
        class="form-input date-input-year"
        maxlength="4"
        name="terra-date-year-undefined"
        pattern="\\\\d*"
        size="4"
        type="text"
        value=""
      />
    </div>
    <button
      aria-disabled="false"
      aria-label=" Terra.datePicker.openCalendar"
      class="button neutral compact button is-invalid"
      data-terra-open-calendar-button="true"
      title="Terra.datePicker.openCalendar"
      type="button"
    >
      <span
        class="button-label-win icon-only"
      >
        <span
          class="icon"
        >
          <svg
            class="tui-Icon icon icon-svg"
            focusable="false"
            height="1em"
            role="presentation"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="format-text"
    id="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
  >
    <span
      aria-live="off"
      class="visually-hidden-text"
    >
       
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey 
    </span>
    <div
      aria-hidden="true"
    >
      (Terra.datePicker.dateFormat)
    </div>
  </div>
</div>
`;

exports[`should render a default date input 1`] = `
<div
  class=""
>
  <div
    class="date-input-container"
  >
    <div
      class="date-input"
    >
      <input
        data-terra-date-input-hidden="true"
        type="hidden"
      />
      <span
        class="visually-hidden-text"
      >
        Terra.datePicker.date
      </span>
      <span
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="all"
        class="visually-hidden-text"
      />
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.monthLabel"
        aria-required="false"
        class="form-input date-input-month"
        maxlength="2"
        name="terra-date-month-undefined"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="date-spacer"
      >
        /
      </span>
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.dayLabel"
        aria-required="false"
        class="form-input date-input-day"
        maxlength="2"
        name="terra-date-day-undefined"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        class="date-spacer"
      >
        /
      </span>
      <input
        aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
        aria-label="Terra.datePicker.yearLabel"
        aria-required="false"
        class="form-input date-input-year"
        maxlength="4"
        name="terra-date-year-undefined"
        pattern="\\\\d*"
        size="4"
        type="text"
        value=""
      />
    </div>
    <button
      aria-disabled="false"
      aria-label=" Terra.datePicker.openCalendar"
      class="button neutral compact button"
      data-terra-open-calendar-button="true"
      title="Terra.datePicker.openCalendar"
      type="button"
    >
      <span
        class="button-label-win icon-only"
      >
        <span
          class="icon"
        >
          <svg
            class="tui-Icon icon icon-svg"
            focusable="false"
            height="1em"
            role="presentation"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="format-text"
    id="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
  >
    <span
      aria-live="off"
      class="visually-hidden-text"
    >
       
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat.  Terra.datePicker.hotKey 
    </span>
    <div
      aria-hidden="true"
    >
      (Terra.datePicker.dateFormat)
    </div>
  </div>
</div>
`;

exports[`should render a default date input with all props 1`] = `
<DatePickerInput
  ariaLabel="Aria Label text"
  buttonRefCallback={
    [MockFunction] {
      "calls": Array [
        Array [
          <button
            aria-disabled="false"
            aria-label="Sunday, January 1, 2017 Terra.datePicker.selected Terra.datePicker.openCalendar"
            class="button neutral compact button"
            data-terra-open-calendar-button="true"
            title="Terra.datePicker.openCalendar"
            type="button"
          >
            <span
              class="button-label-win icon-only"
            >
              <span
                class="icon"
              >
                <svg
                  class="tui-Icon icon icon-svg"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                  />
                </svg>
              </span>
            </span>
          </button>,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  inputAttributes={Object {}}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isIncomplete={false}
  isInvalid={false}
  maxDate="2100-12-31"
  minDate="1900-01-01"
  name="date-input"
  onBlur={[Function]}
  onButtonFocus={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={false}
  useExternalFormatMask={false}
  value="01/01/2017"
>
  <div
    className=""
  >
    <div
      className="date-input-container"
    >
      <div
        className="date-input"
        id="terra-date-input"
      >
        <input
          data-terra-date-input-hidden={true}
          name="date-input"
          type="hidden"
          value="2017-01-01"
        />
        <VisuallyHiddenText
          text="Aria Label text, Sunday, January 1, 2017"
        >
          <span
            className="visually-hidden-text"
          >
            Aria Label text, Sunday, January 1, 2017
          </span>
        </VisuallyHiddenText>
        <VisuallyHiddenText
          aria-atomic="true"
          aria-live="assertive"
          aria-relevant="all"
          refCallback={[Function]}
        >
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="all"
            className="visually-hidden-text"
          />
        </VisuallyHiddenText>
        <DateInputLayout
          dateFormatOrder="MDY"
          day={
            <Input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Aria Label text Terra.datePicker.dayLabel"
              aria-required={false}
              className="date-input-day"
              disabled={false}
              id="terra-date-input-terra-date-picker-day"
              isIncomplete={false}
              isInvalid={false}
              maxLength="2"
              name="terra-date-day-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="2"
              type="text"
              value="01"
            />
          }
          month={
            <Input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Aria Label text Terra.datePicker.monthLabel"
              aria-required={false}
              className="date-input-month"
              disabled={false}
              id="terra-date-input-terra-date-picker-month"
              isIncomplete={false}
              isInvalid={false}
              maxLength="2"
              name="terra-date-month-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="2"
              type="text"
              value="01"
            />
          }
          separator={
            <span
              className="date-spacer"
            >
              /
            </span>
          }
          year={
            <Input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Aria Label text Terra.datePicker.yearLabel"
              aria-required={false}
              className="date-input-year"
              disabled={false}
              id="terra-date-input-terra-date-picker-year"
              isIncomplete={false}
              isInvalid={false}
              maxLength="4"
              name="terra-date-year-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="4"
              type="text"
              value="2017"
            />
          }
        >
          <Input
            aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Aria Label text Terra.datePicker.monthLabel"
            aria-required={false}
            className="date-input-month"
            disabled={false}
            id="terra-date-input-terra-date-picker-month"
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-date-month-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value="01"
          >
            <input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Aria Label text Terra.datePicker.monthLabel"
              aria-required={false}
              className="form-input date-input-month"
              disabled={false}
              id="terra-date-input-terra-date-picker-month"
              maxLength="2"
              name="terra-date-month-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value="01"
            />
          </Input>
          <span
            className="date-spacer"
          >
            /
          </span>
          <Input
            aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Aria Label text Terra.datePicker.dayLabel"
            aria-required={false}
            className="date-input-day"
            disabled={false}
            id="terra-date-input-terra-date-picker-day"
            isIncomplete={false}
            isInvalid={false}
            maxLength="2"
            name="terra-date-day-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="2"
            type="text"
            value="01"
          >
            <input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Aria Label text Terra.datePicker.dayLabel"
              aria-required={false}
              className="form-input date-input-day"
              disabled={false}
              id="terra-date-input-terra-date-picker-day"
              maxLength="2"
              name="terra-date-day-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="2"
              type="text"
              value="01"
            />
          </Input>
          <span
            className="date-spacer"
          >
            /
          </span>
          <Input
            aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
            aria-label="Aria Label text Terra.datePicker.yearLabel"
            aria-required={false}
            className="date-input-year"
            disabled={false}
            id="terra-date-input-terra-date-picker-year"
            isIncomplete={false}
            isInvalid={false}
            maxLength="4"
            name="terra-date-year-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            size="4"
            type="text"
            value="2017"
          >
            <input
              aria-describedby="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
              aria-label="Aria Label text Terra.datePicker.yearLabel"
              aria-required={false}
              className="form-input date-input-year"
              disabled={false}
              id="terra-date-input-terra-date-picker-year"
              maxLength="4"
              name="terra-date-year-date-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              required={false}
              size="4"
              type="text"
              value="2017"
            />
          </Input>
        </DateInputLayout>
      </div>
      <Button
        aria-label="Sunday, January 1, 2017 Terra.datePicker.selected Terra.datePicker.openCalendar"
        className="button"
        data-terra-open-calendar-button={true}
        icon={
          <IconCalendar
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        }
        isBlock={false}
        isCompact={true}
        isDisabled={false}
        isIconOnly={true}
        isReversed={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        refCallback={
          [MockFunction] {
            "calls": Array [
              Array [
                <button
                  aria-disabled="false"
                  aria-label="Sunday, January 1, 2017 Terra.datePicker.selected Terra.datePicker.openCalendar"
                  class="button neutral compact button"
                  data-terra-open-calendar-button="true"
                  title="Terra.datePicker.openCalendar"
                  type="button"
                >
                  <span
                    class="button-label-win icon-only"
                  >
                    <span
                      class="icon"
                    >
                      <svg
                        class="tui-Icon icon icon-svg"
                        focusable="false"
                        height="1em"
                        role="presentation"
                        viewBox="0 0 48 48"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        text="Terra.datePicker.openCalendar"
        type="button"
        variant="neutral"
      >
        <button
          aria-disabled={false}
          aria-label="Sunday, January 1, 2017 Terra.datePicker.selected Terra.datePicker.openCalendar"
          className="button neutral compact button"
          data-terra-open-calendar-button={true}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          title="Terra.datePicker.openCalendar"
          type="button"
        >
          <span
            className="button-label-win icon-only"
          >
            <span
              className="icon"
            >
              <IconCalendar
                className="icon-svg"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <IconBase
                  className="icon-svg"
                  focusable="false"
                  height="1em"
                  isBidi={false}
                  isSpin={false}
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="tui-Icon icon icon-svg"
                    focusable="false"
                    height="1em"
                    role="presentation"
                    viewBox="0 0 48 48"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M43 6h-4V2.2C39 1 38 0 36.8 0h-1.7C33.9.1 33 1 33 2.2V6H15V2.2C15 1 14 0 12.8 0h-1.7C9.9.1 9 1 9 2.2V6H5c-1.1 0-2 .9-2 2v38c0 1.1.9 2 2 2h24c1.3-.1 2.5-.6 3.4-1.4l11.2-11.1c.8-.9 1.3-2.1 1.4-3.4V8c0-1.1-.9-2-2-2zM6 21h36v10H30c-1.1 0-2 .9-2 2v12H6V21zm25 22.8V34h9.8L31 43.8z"
                    />
                  </svg>
                </IconBase>
              </IconCalendar>
            </span>
          </span>
        </button>
      </Button>
    </div>
    <div
      className="format-text"
      id="terra-date-picker-description-format-00000000-0000-0000-0000-000000000000"
    >
      <VisuallyHiddenText
        aria-live="off"
        text=" 
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat. Sunday, January 1, 2017, Terra.datePicker.hotKey "
      >
        <span
          aria-live="off"
          className="visually-hidden-text"
        >
           
            Terra.datePicker.dateFormatLabel 
            Terra.datePicker.dateFormat. Sunday, January 1, 2017, Terra.datePicker.hotKey 
        </span>
      </VisuallyHiddenText>
      <div
        aria-hidden="true"
      >
        (Terra.datePicker.dateFormat)
      </div>
    </div>
  </div>
</DatePickerInput>
`;
